# media_source_collator

./: .gitignore  .test  2  3  4  AMProcess.md  CHANGELOG  Cartier.py  Dockerfile  FrenchDBPedia.md  HELP.md  HOME.py  Help.ipynb  Help.md  Home.py  README.md  \  app.py  docker-compose.yml  excel.xlsx  pyproject.toml  query_dbPedia.py
.ipynb_checkpoints/: Help-checkpoint.ipynb
CountryReporter/: AM_sources_compiler (2).ipynb  README.md  query_dbPedia.py
CountryReporter/mappings/: en.yml  fr.yml
db/: db.py  queries.py
mappings/: en.yml  fr.yml
pages/: 1_🔬_Coverage_Review.py  2_🕵️_Quality_Assurance.py  🔬_Coverage_Research.py
scrapers/belgium/: Untitled.ipynb  belgian_newspapers.xlsx
utils/: articles_checker.py  collate_sources.py  country_review.py  db_pedia.py  excel.py  main.py
